test/Fail/TranspErasedPi-lhs.err
TranspErasedPi-lhs.agda:26.55-56: error: [VariableIsErased]
Variable x is declared erased, so it cannot be used here
when checking that the expression x has type outS (A i)
